# lgr-bootcamp-project

./: .gitignore  compose.yml
.github/workflows/: checks.yaml  prod.yml
app-service/: Cargo.toml  Dockerfile  bacon.toml
auth-service/: Cargo.toml  Dockerfile  bacon.toml
auth-service/src/: domain.rs  lib.rs  main.rs
auth-service/src/domain/: email.rs  errors.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: health.rs  login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_user_store.rs  mod.rs
auth-service/tests/api/: helpers.rs  routes.rs
auth-service/tests/api/routes/: health.rs  login.rs  logout.rs  mod.rs  root.rs  signup.rs  verify_2fa.rs  verify_token.rs
infrastructure/: README.md  alb.tf  ecs.tf  main.tf  outputs.tf  outputs_ecs.tf  sg.tf  terraform.tf  variables.tf  vpc.tf
