[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"


[lib]
path = "src/lib.rs"
name = "authservice"

[[bin]]
path = "src/main.rs"
name = "auth-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }

[dev-dependencies]
reqwest = { version = "0.13.1", features = ["json"] }

