[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"


[lib]
path = "src/lib.rs"
name = "authservice"

[[bin]]
path = "src/main.rs"
name = "auth-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
axum = "0.8.6"
claims = "0.8.0"
fake = "4.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
validator = "0.20.0"

[dev-dependencies]
reqwest = { version = "0.13.1", features = ["json"] }

